# pics-duplicates

./: collect_hashes.sh  compare_hashes.sh  package-lock.json  package.json  run.sh
compare_pics/: README.md  compare-pics.cabal
compare_pics/src/: Main.hs
src/: collect_hashes.ts  compare_hashes.ts  find_originals.ts  index.ts
transfer_metadata/: app.py
