name:                compare-pics
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/emmanueltouzery/compare-pics#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          etouzery@gmail.com
copyright:           2019 Emmanuel Touzery
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable compare-pics
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  ghc-options:         -Wall -Wno-unused-do-bind -threaded -O
  build-depends:       base >= 4.7 && < 5
                       , relude
                       , directory
                       , filepath
                       , safe-exceptions
                       , text
                       , containers
                       , process
                       , path
                       , path-io
                       , haskell-gi-base
                       , gi-gdkpixbuf
                       , gi-gtk
